--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
     {% include 'menubar.html' %}
     
     <!--Main-->
-    <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4"><div style="position: absolute; inset: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;" class="chartjs-size-monitor"><div class="chartjs-size-monitor-expand" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:1000000px;height:1000000px;left:0;top:0"></div></div><div class="chartjs-size-monitor-shrink" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:200%;height:200%;left:0; top:0"></div></div></div>
+    <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
           
           <!--Intestazione-->
           <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
@@ -24,15 +24,19 @@
               <ol class="carousel-indicators">
                   <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                   <li data-target="#myCarousel" data-slide-to="1"></li>
+                  <li data-target="#myCarousel" data-slide-to="2"></li>
               </ol>
               <!-- Wrapper for carousel items -->
               <div class="carousel-inner">
-                  <div class="carousel-item active" style="text-align:center">
-                      <img src="static/img/carosello1.jpg" alt="First Slide" class="img-fluid">
-                  </div>
-                  <div class="carousel-item" style="text-align:center">
-                      <img src="static/img/carosello2.jpg" alt="Second Slide" class="img-fluid">
-                  </div>        
+                    <div class="carousel-item active" style="text-align:center">
+                        <img src="static/img/carosello1.jpg" alt="First Slide" class="img-fluid">
+                    </div>
+                    <div class="carousel-item" style="text-align:center">
+                        <img src="static/img/carosello2.jpg" alt="Second Slide" class="img-fluid">
+                    </div>        
+                    <div class="carousel-item" style="text-align:center">
+                        <img src="static/img/carosello3.jpg" alt="Third Slide" class="img-fluid">
+                    </div>        
               </div>
               <!-- Carousel controls -->
               <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
