--- a/templates/menubar.html
+++ b/templates/menubar.html
@@ -7,12 +7,18 @@
     </a>
     <!--Campo di ricerca-->
     <input id="id_ricerca" class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
-    <!--Campo info-->
+    <!--Campo info-->    
     <ul class="navbar-nav px-3">
       <li class="nav-item text-nowrap">
         <a class="nav-link" href="info">Info</a>
       </li>
     </ul>
+    <!--Campo help-->
+    <ul class="navbar-nav px-3">
+      <li class="nav-item text-nowrap">
+        <a class="nav-link" href="help">Help</a>
+      </li>
+    </ul>    
 </nav>
 
 <!--Menù laterale a sinistra-->
@@ -31,6 +37,12 @@
             <a class="nav-link" href="search_string">
               <i class="fa fa-search"></i>
               Search strings
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="import_export">
+              <i class="fa fa-exchange-alt"></i>
+              Import export
             </a>
           </li>
           <li class="nav-item">
@@ -67,6 +79,36 @@
             <a class="nav-link" href="top_sessions">                  
               <i class="fa fa-stopwatch"></i>
               Top sessions
+            </a>
+          </li>                        
+          <li class="nav-item">
+            <a class="nav-link" href="jobs_status">                  
+              <i class="fa fa-running"></i>
+              Job status
+            </a>
+          </li>                        
+          <li class="nav-item">
+            <a class="nav-link" href="table_space">                  
+              <i class="fa fa-database"></i>
+              Table space
+            </a>
+          </li>                        
+          <li class="nav-item">
+            <a class="nav-link" href="table_wasted">                  
+              <i class="fa fa-trash-alt"></i>
+              Table wasted
+            </a>
+          </li>                        
+          <li class="nav-item">
+            <a class="nav-link" href="server_status">                  
+              <i class="fa fa-server"></i>
+              Server status
+            </a>
+          </li>                        
+          <li class="nav-item">
+            <a class="nav-link" href="top_tables">                  
+              <i class="fa fa-chart-pie"></i>
+              Top tables
             </a>
           </li>                        
           <li class="nav-item">
