--- a/templates/ascii_graphics.html
+++ b/templates/ascii_graphics.html
@@ -12,7 +12,7 @@
   	{% include 'menubar.html' %}
 
 	 <!--Main-->
-	 <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4"><div style="position: absolute; inset: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;" class="chartjs-size-monitor"><div class="chartjs-size-monitor-expand" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:1000000px;height:1000000px;left:0;top:0"></div></div><div class="chartjs-size-monitor-shrink" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:200%;height:200%;left:0; top:0"></div></div></div>
+	 <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">		 
 
 		<!-- Titolo della pagina-->
 		<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
@@ -55,7 +55,7 @@
 		<!-- Risultato della conversione-->
 		<div class="row justify-content-center">
 			<div class="col-6">				
-				<textarea name="risultato" rows=10 cols=85 style = "font-family:'Courier New', monospace;font-size:16px;">{{ python_testo_convertito }}</textarea>		
+				<textarea name="risultato" rows=10 style = "font-family:'Courier New', monospace;font-size:16px; width:100%;">{{ python_testo_convertito }}</textarea>		
 			</div>
 		</div>
 	 </main>
