--- a/templates/table_wasted.html
+++ b/templates/table_wasted.html
@@ -16,24 +16,14 @@
 
 		<!-- Titolo della pagina-->
 		<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
-            <h1 class="h2">List of sessions locked by a table in Oracle server</h1>            
+            <h1 class="h2">Table wasted in Oracle {{ python_text_totale }}</h1>            
 			
 			<!-- Pulsanti per l'export dei dati (v. id_my_table che è il nome della tabella creata lato Python)-->
 			{% include 'botton_export_my_table.html' %}
         </div>
 	
 		<!-- Contenuti (griglia) -->
-		<div class="container">			
-			<!-- Questa div contiene lo spazio dove viene visualizzato un messaggio flash, di conferma-->
-			<div class="row justify-content-center">
-				{% for message in get_flashed_messages() %}		 
-				<div class="alert alert-success alert-dismissible fade show">
-					<strong>Success!</strong> {{ message }}
-					<button type="button" class="close" data-dismiss="alert">&times;</button>    
-				</div>
-				{% endfor %}
-				{% block content %} {% endblock %}
-			</div>	
+		<div class="container">						
 			<!-- Form di input dei dati-->
 			<div class="row justify-content-center">
 				<div class="col-6">					    			
@@ -47,19 +37,9 @@
 							</div>
 						</div> 						
 						<div class="form-group row">
-							<!-- Label nome tabella (viene assegnata una classe boostrap)-->
-							{{ python_form.e_table_name.label(class_="col-sm-4 control-label") }}					
-							<!-- Lista di valori per nomi tabelle (viene assegnata una classe boostrap)-->
-							<div class="col-sm-4">
-								{{ python_form.e_table_name(class_="form-control") }}					
-							</div>
-							<!--Pulsante per il caricamento della lista tabelle (non è stato creato con wtforms perché non sono riuscito a creare pulsante submit con icona)-->					
-							<button type="submit" class="btn btn-primary btn-sm" name="b_carica_nomi_tabelle" value="click_b_carica_nomi_tabelle"><i class="fa fa-sync"></i></button>
-						</div> 						
-						<div class="form-group row">
-							<!-- Pulsante di avvio ricerca dei locks (viene assegnata una classe boostrap)-->
+							<!-- Pulsante di avvio ricerca (viene assegnata una classe boostrap)-->
 							<div class="col">
-								{{ python_form.b_ricerca_blocchi(class_="btn btn-primary btn-block") }}
+								{{ python_form.b_ricerca(class_="btn btn-primary btn-block") }}
 							</div>					
 						</div>
 					</form>			
