--- a/templates/table_wasted_script.html
+++ b/templates/table_wasted_script.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<head>
+<head>	
 	<!-- Importo tramite Flask html contenente i riferimenti alle librerie bootstrap -->
 	{% include 'bootstrap.html' %}
 </head>
@@ -11,29 +11,23 @@
 	<!-- Importo tramite Flask html contenente i menu e tutta l'intestazione -->
   	{% include 'menubar.html' %}
 
-    <!--Main-->
+	<!--Main-->
     <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
 
 		<!-- Titolo della pagina-->
 		<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
-            <h1 class="h2">Phone book</h1>            
-			
-			<!-- Pulsanti per l'export dei dati (v. id_my_table che è il nome della tabella creata lato Python)-->
-			{% include 'botton_export_my_table.html' %}
+            <h1 class="h2">Script for table {{ python_table_name }}</h1>            			
         </div>
 
-		<!-- Importo tramite Flask righe della rubrica caricate da Python (viene creata una tabella dal nome id_my_table_book-->		
-		<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3">
-			<!-- Tabella-->
-			<div class="table-responsive">			
-				{{ python_elenco_righe|safe }}
-			</div>    
-		</div>
-		
+        <!--Contenuto dello script -->        
+		<h5>					
+			{{ python_table_wasted_script|safe }}            
+        </h5>
+	
 	</main>
 
 <!-- Importo tramite Flask html contenente la parte finale della pagina -->
 {% include 'footer.html' %}
-  
+
 </body>
 </html>
