--- a/templates/bootstrap.html
+++ b/templates/bootstrap.html
@@ -9,7 +9,7 @@
   <!-- Libreria icone-->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
   <!-- Bootstrap core CSS -->
-  <link href="/static/css/bootstrap.css" rel="stylesheet">	  
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">  
   <!-- Custom styles for this template -->
   <link href="/static/css/dashboard.css" rel="stylesheet">
 	<!-- Includo la libreria per ordinare le colonne di tabella tramite la classe "sortable" -->
@@ -17,3 +17,5 @@
 	<style> table.sortable th:not(.sorttable_sorted):not(.sorttable_sorted_reverse):not(.sorttable_nosort):after { content: " \25B4\25BE" } </style>
 	<!-- Includo la libreria per esportare i dati in excel e csv-->
 	<script src="/static/plugin/excellentexport-1.4/excellentexport.js"></script>
+
+  <!--<link href="/static/css/bootstrap.css" rel="stylesheet">-->
