--- a/templates/top_tables.html
+++ b/templates/top_tables.html
@@ -75,7 +75,7 @@
 {% include 'footer.html' %}
 
 <!-- Grafico di tipo torta dove le etichette e i dati vengono caricati da liste provenienti da flask-python-->
-<script src="/static/js/Chart.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 <script>
   var ctx = document.getElementById("myChart");
   var myChart = new Chart(ctx, {
