--- a/templates/menubar.html
+++ b/templates/menubar.html
@@ -26,11 +26,11 @@
   <div class="row">
     <nav class="col-md-2 d-none d-md-block bg-light sidebar">
       <div class="sidebar-sticky">
-        <ul class="nav flex-column">
+        <ul class="nav flex-column">          
           <li class="nav-item">
-            <a class="nav-link active" href="home">
+            <a class="nav-link" href=".">
               <i class="fa fa-home"></i>
-              Home <span class="sr-only">(current)</span>
+              Home
             </a>
           </li>
           <li class="nav-item">
@@ -122,6 +122,9 @@
               <i class="fa fa-download"></i>
               Download an object from iAS12g
             </a>
-          </li>                          
+          </li>     
+        </ul>                     
       </div>
     </nav>
+  </div>
+</div>
