--- a/templates/table_locks.html
+++ b/templates/table_locks.html
@@ -53,8 +53,10 @@
 							<div class="col-sm-4">
 								{{ python_form.e_table_name(class_="form-control") }}					
 							</div>
-							<!--Pulsante per il caricamento della lista tabelle (non è stato creato con wtforms perché non sono riuscito a creare pulsante submit con icona)-->					
-							<button type="submit" class="btn btn-primary btn-sm" name="b_carica_nomi_tabelle" value="click_b_carica_nomi_tabelle"><i class="fa fa-sync"></i></button>
+							<div class="form-group mx-sm-3 mb-2">
+								<!--Pulsante per LOV tabelle oracle (da notare come non si tratta di un bottone di submit ma anzi è collegato a funzione sottostante)-->					
+								<button type="button" class="btn btn-secondary" id="b_LOV_tabella_oracle"><i class="fa fa-list"></i></button>							
+							</div> 	
 						</div> 						
 						<div class="form-group row">
 							<!-- Pulsante di avvio ricerca dei locks (viene assegnata una classe boostrap)-->
@@ -76,8 +78,90 @@
 		</div> 
 	</main>
 
+	<!--Definizione della finestra modale dove viene riportato elenco delle tabelle contenute in un database oracle-->
+	<div class="container">
+		<!-- The Modal -->
+		<div class="modal fade" id="myModal_LOV_oracle">
+			<div class="modal-dialog modal-dialog-centered">
+				<div class="modal-content">
+				
+					<!-- Modal Header -->
+					<div class="modal-header">						
+						<!--Campo di ricerca e bottone di chiusura-->
+						<input id="id_ricerca_modal_LOV_oracle" class="form-control w-100" type="text" placeholder="Search" aria-label="Search">    
+						<button type="button" class="close" data-dismiss="modal">&times;</button>												
+					</div>
+					
+					<!-- Modal body -->
+					<div class="modal-body" style="height: 400px; overflow-y: auto;">
+						<!-- Importo tramite Flask righe caricate da Python-->	
+						<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3">
+							<!-- Tabella-->
+							<div class="table-responsive" id="table_myModal_LOV_oracle">		
+								<!--Qui verrà inserito il risultato della chiamata Ajax a python-->
+							</div>    
+						</div> 
+					</div>
+					
+					<!-- Modal footer -->
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+					</div>
+				
+				</div>
+			</div>
+		</div>
+	</div>
+
 <!-- Importo tramite Flask html contenente la parte finale della pagina -->
 {% include 'footer.html' %}
+
+<!-- Funzione a corredo della modal di LOV tabelle oracle per leggere il contenuto di una cella di tabella-->
+<script>	
+	function Fn_LOV_oracle(obj)
+	{		
+		var row=obj.parentNode;
+		// contenuto della cella selezionata (nella cella deve essere presente il codice onclick a questa funzione)
+		//alert("You clicked : " + row.cells[0].innerHTML);						
+		$('#e_table_name').val( row.cells[0].innerHTML )
+		// chiudo la window modale mymodal
+		$('#myModal_LOV_oracle').modal('toggle');
+	}
+</script>
+
+<!-- Funzione a corredo della modal di LOV tabelle oracle per la ricerca di valore in tabella-->
+<script>
+	$(document).ready(function(){
+	  $("#id_ricerca_modal_LOV_oracle").on("keyup", function() {
+		var value = $(this).val().toLowerCase();      
+		$("#id_table_modal_LOV_oracle tr").filter(function() {
+		  $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+		});
+	  });
+	});
+</script>  
+
+<!-- Chiamata ajax ad una funzione di python e successiva apertura della modal page-->
+<!-- Spiegazione del codice
+	 La funzione si attiva al click del bottone p_LOV_tabella_oracle
+	 Viene richiamata la funzione Ajax getJSON che ha i seguenti parametri
+	 	/LOVTabelleOracle = è il nome della pagina lato python flask che viene richiamata
+		Una sezione di dati in formato json = "server_name" : "backup_815", "schema_name" : "smile"
+		Una sezione di ricevimento dati di output che li mette in una zona specifica della modal
+-->
+<script type=text/javascript> 
+	$(function() 
+		{ 			
+			$("#b_LOV_tabella_oracle").click(function (event) 
+			{ 
+				// Richiamo la funzione lato python
+				$.getJSON('/LOVTabelleOracle', { "server_name": $("#e_server_name").val(), "schema_name": 'SMILE' }, function(data) {  $("#table_myModal_LOV_oracle").html(data.risultato); }); 				
+				// Apro la finestra modale
+				$('#myModal_LOV_oracle').modal('show');
+			});				
+		 }		
+	); 
+</script>   
 
 </body>
 </html>
