--- a/templates/info.html
+++ b/templates/info.html
@@ -38,7 +38,7 @@
 				- WtForms 2.3	(form fields service)<br>
 				- Bootstrap 4	(graphic interface).<br>
 				- pyfiglet 0.8	(ascii graphic library)
-			</p>
+				</p>
 			</section>
 			<img class="img-fluid" src="static/img/mgrep_logo.png">  
 		</div> 
@@ -49,6 +49,8 @@
 		<div class="col-6">
 			<section id="info-contatto">
 				<h3>Who i am?</h3>
+				<p>I'm Marco Valaguzza, programmer since 1987.<br>Python is my preferred language for your simplicity and scalability.
+				</p>
 				<img class="img-fluid" src="static/img/who_i_am.jpg">  
 			</section>
 		</div> 
