--- a/templates/info.html
+++ b/templates/info.html
@@ -36,7 +36,8 @@
 				- Python  3.6	(...the core)<br>
 				- Flask 1.1.2 	(server side framework)<br>
 				- WtForms 2.3	(form fields service)<br>
-				- Bootstrap 4	(graphic interface).<br>
+				- Bootstrap 4	(graphic interface)<br>
+				- XlsxWriter1.0 (excel interface)<br> 
 				- pyfiglet 0.8	(ascii graphic library)
 				</p>
 			</section>
